# fotosyntesefestival-public

./: LICENCE  README
game/: export_tracks.py  fotosyntesefestival.yaml  game.py  import_tracks.py  midi.py  net.py
videomode/: Makefile.am  config.h.in  configure.ac  draw.c  draw.h  fragment.glsl  mkanims.py  net.c  net.h  tga.c  tga.h  vc_main.c  vertex.glsl  x11_main.c
